[package]
name = "sentinel"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.86"
clap = { version = "4.5.28", features = ["derive"] }
console = "0.15.10"
futures = "0.3.31"
notify = "8.0.0"
tokio = { version = "1", features = ["full"] }
directories = "5.0"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
